--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "serialport": "^5.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/triforcely/sds011-wrapper.git"
   }
 }
