--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Wrapper library created to simplify usage of SDS011 laser dust sensor in your projects",
   "main": "wrapper.js",
   "scripts": {
-    "test": "mocha tests/*.js"
+    "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec tests && codecov"
   },
   "keywords": [
     "SDS011",
